--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -2,3 +2,4 @@
 title: "Teaching"
 ---
 
+I have served as the head teaching assistant (TA) for Econ001 (Introduction to Micro Economics)  for three years and TA for Econ101 (Intermediate Economics) at the Department of Economics, University of Pennsylvania. I have also served as a TA for Econ101 (Introductory Microeconomics) at the Department for Economics, London School of Economics and Political Science. I was also nominated for the best teaching award at LSE.   
