--- a/index.Rmd
+++ b/index.Rmd
@@ -18,3 +18,7 @@ sgeorg [at] sas.upenn.edu
 +1 (301)-531-0163
 
 
+
+**Working papers**
+
+"Price and frictions in the market for IPv4 addresses" - **Job Market Paper**
