--- a/index.Rmd
+++ b/index.Rmd
@@ -13,12 +13,11 @@ My research focuses on the economics in the market for IPv4 addresses and transi
 **Keywords**:
 Industrial organization, asset pricing,  technology adoption
 
-**Contact Information**:
-sgeorg [at] sas.upenn.edu
-+1 (301)-531-0163
-
-
 
 **Working papers**
 
-"Price and frictions in the market for IPv4 addresses" - **Job Market Paper**
+**Job Market Paper**
+
+"Price and frictions in the market for IPv4 addresses"
+
+*Abstract*: In this paper I study the evolution of prices and frictions in the market for IPv4 addresses. Each IPv4 address being a durable, homogenous resource has zero fundamental value once the standard changes from IPv4 to IPv6. Yet in the market a striking empirical feature has been the rising prices IPv4 prices. At the same IPv6 adoption has been lagging for over two decades. First I lay out the key empirical features of this industry, develop a dynamic model of firm behavior in the IPv4 market and IPv6 adoption decisions. I estimate the model parameters using simulated method of moments and predict rising price and IPv6 adoption pattern. In counterfactual simulations, I find that switching and adjustment costs raise prices and delay IPv6 adoption. I find that in the absence of network effects firms would adopt IPv6 almost immediately. 
