--- a/index.Rmd
+++ b/index.Rmd
@@ -1,14 +1,25 @@
 ---
-title: "About me"
-fontsize: 24pt
+title: "Sarah George"
+fontsize: 20pt
 ---
 
 
-
+<style>
+div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "grey">
 <div class = "row">
   
 <div class = "col-md-6">
+```{r out.width="400%",echo=FALSE}
+knitr::include_graphics("image.png")
+```
+</div>
+
+
+<div class = "col-md-6">
 <br><br>
+ <font size="4">  
 
 **Welcome!**
 
@@ -20,31 +31,40 @@ My research focuses on the economics in the market for IPv4 addresses and transi
 
 Industrial organization, technology adoption, network effects, secondary markets 
 
-
-</div>
-<div class = "col-md-6">
-```{r out.width="100%",echo=FALSE}
-knitr::include_graphics("image.png")
-```
+</font>
 </div>
 </div> 
+</div>
 
-**Job Market Paper**: 
-***"IPv4 address market and transition to the next protocol"***
 
-**Abstract**: In this paper I study the market for internet addresses - a market created to mitigate short term
-scarcity of IPv4 addresses as firms transitioned to the next protocol. I analyze the inefficiencies that
-arise from the decentralized transition from IPv4 to IPv6. Inefficiencies arise due to the presence of
-adjustment costs, switching costs and network effects which are frictions in the market. Towards this
-end, I develop a dynamic model of firm behavior in the IPv4 market and IPv6 adoption. Then I collect a
-novel data to estimate the main parameters using simulated method of moments and use this to predict
-prices and IPv6 adoption. This model can explain the striking increase in prices observed and in the
-current environment near complete IPv6 adoption will take 33 years. I also find that enterprise firms
-(universities and companies that are mostly users) have 58% higher per-unit switching costs and content
-provider firms 24% higher compared to ISPs. In counterfactual simulations, I find that in the absence of
-switching and adjustment costs prices are lower and IPv6 adoption happens almost 20 years faster. I find
-that the producer surplus is 88% higher than in the baseline. In the second counterfactual I find that
-with inter-operable network effects across both protocols firms would adopt IPv6 almost immediately
-whereas prices reach a peak and fall within three years. Producer surplus in this scenario is lower than the
-baseline by 1%. In the third counterfactual I find the optimal adoption path that maximizes aggregate
-producer surplus and find that the surplus is higher than the baseline by 25%.
+$~$
+
+
+<style>
+div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "blue">
+<center>
+<font size="4">
+**Contact:**
+</font>  
+
+
+<font size="4">  
+
+Department of Economics,
+
+Room 635, PCPSE, 
+
+133 South, 36th Street
+
+Philadelphia, PA 19104
+
+sgeorg@sas.upenn.edu 
+
+301-531-0163
+
+ </div>
+
+</center>
+</font>
