--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
   
 <div class = "col-md-6">
 ```{r fig.width=12, fig.height=16,echo=FALSE}
-knitr::include_graphics("image.png")
+knitr::include_graphics("IMG_2456.JPG")
 ```
 </div>
 
