--- a/research.Rmd
+++ b/research.Rmd
@@ -33,3 +33,5 @@ producer surplus and find that the surplus is higher than the baseline by 25%.
 </font>  
 
 </div>
+
+You can find my Job Market Paper [here](Sarah_George_JMP_draft.pdf)
